--- a/.gitconfig
+++ b/.gitconfig
@@ -81,7 +81,10 @@
 
 	pu = "push origin HEAD"
 	
-  	# Do a push/pull for just one branch
+	# Get the current branch name
+	branch-name = rev-parse --abbrev-ref HEAD
+	
+  	# Do a pull for just one branch
   	pl = "!git pull origin $(git branch-name)"
 
 [apply]
