--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,7 +1,6 @@
 [character]
-symbol = "➜"
+success_symbol = "➜"
 error_symbol = "✗"
-use_symbol_for_status = true
 
 [git_status]
 style = "bold dimmed"
