--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -205,3 +205,6 @@
 	clean = git-lfs clean -- %f
 	smudge = git-lfs smudge -- %f
 	process = git-lfs filter-process
+[user]
+	name = Wart Claes
+	email = wart.claes@gmail.com
