--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -58,10 +58,6 @@ map cmd+[        previous_window
 # clear the terminal screen
 map cmd+k combine : clear_terminal scrollback active : send_text normal,application \x0c
 
-# jump to beginning and end of word
-map alt+left send_text all \x1b\x62
-map alt+right send_text all \x1b\x66
-
 # jump to beginning and end of line
 map cmd+left send_text all \x01
 map cmd+right send_text all \x05
@@ -86,3 +82,5 @@ map cmd+c        copy_to_clipboard
 map cmd+v        paste_from_clipboard
 
 map cmd+. layout_action bias 80
+
+macos_option_as_alt left
